2001-05-17  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (new_cell): don't set cell background
	from table (it's resolved dynamically now)
	(html_engine_table_set_bg_color): allow NULL c which means disable
	bg color

	* htmlimage.c (html_image_pointer_load): ref image pointer
	(html_image_factory_register): don't ref image pointer before
	loading (it's done in load now) but ref all image pointers (for
	register)
	(html_image_factory_unregister): unref image pointer in unregister

	* htmltablecell.c (draw_background_helper): use table bg pixmap if
	needed

	* htmlengine.c (parse_table): don't use table bg pixmap as starting
	row bg pixmap

	* htmlengine-edit-table.c (html_engine_table_set_bg_color): new
	method
	(html_engine_table_set_bg_pixmap): new method

	* htmlengine.c (parse_table): don't use table bg color as starting
	row color

	* htmltablecell.c (draw_background_helper): use table bg color if
	needed

2001-05-15  Radek Doulik  <rodo@ximian.com>

	* htmltablecell.h (HTML_IS_TABLE_CELL): renamed from
	IS_HTML_TABLE_CELL

	* tabs should work now nicely for plain text mode and for PRE

2001-05-10  Jon Trowbridge  <trow@ximian.com>

	* htmliframe.c (html_iframe_init): When rendering a frame, make
	sure that you use the same kind of tokenizer as is being used
	by the parent widget.

	* htmltokenizer.c (html_tokenizer_class_init): Change "begin" and
	"end" from virtual functions to signals with the HTMLTokenizer's
	traditional begin and end behavior as the default handlers.  Add
	the "fully_tokenized" signal.
	(html_tokenizer_begin): Replace the virtual function machinery
	with a signal emission.
	(html_tokenizer_end): Replace the virtual function machinery with
	a signal emission.
	 (html_tokenizer_clone): Added.  Allocates a tokenizer of the same
	type.

2001-05-10  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (mouse_change_pos): make the magic distance threshold
	depend on the space width.
	(focus): start of new focus handler.
