@@ -1,9 +1,14 @@
 2001-05-17  Radek Doulik  <rodo@ximian.com>
 
+	* htmltablecell.h: removed padding
+
 	* htmlengine-edit-table.c (new_cell): don't set cell background
 	from table (it's resolved dynamically now)
 	(html_engine_table_set_bg_color): allow NULL c which means disable
 	bg color
+	(html_engine_get_table): new helper function
+	(html_engine_table_set_padding): new method
+	(html_engine_table_set_border_width): added t parameter
 
 	* htmlimage.c (html_image_pointer_load): ref image pointer
 	(html_image_factory_register): don't ref image pointer before
